# EHS-Snap-Desktop

./: .gitignore  HANDOFF.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  api.ts  export.ts  state.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: abbreviations.rs  ehs.rs  icd.rs  lib.rs  license.rs  main.rs  menu.rs  pdf.rs
src/components/: AddCodeModal.tsx  AddToCollectionModal.tsx  ChemicalDetailView.tsx  ChemicalRow.tsx  CodeDetailView.tsx  CollectionFormModal.tsx  CollectionsView.tsx  CommandPalette.tsx  EmptyDetail.tsx  FavoritesView.tsx  LoiDetailView.tsx  LoiRow.tsx  OnboardingView.tsx  RegulationDetailView.tsx  RegulationRow.tsx  SearchView.tsx  SettingsView.tsx  Splitter.tsx  StatusBar.tsx  Toaster.tsx
src/hooks/: useIsNarrow.ts  useListKeyNav.ts
