[package]
name = "ehssnap"
version = "1.0.0"
description = "EHS Snap — offline OSHA 29 CFR 1910 + MSHA 30 CFR + LOI + NIOSH chemical reference"
authors = ["Ryan"]
edition = "2021"

[lib]
name = "ehssnap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
printpdf = "0.8"
ureq = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
